# caldera_tuya

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt  app_default.config
backup/: CMakeLists.txt  sdkconfig_esp32s3.bak
backup/main/: idf_component.yml  main.c
components/componente/: CMakeLists.txt  mi_modulo.c  mi_modulo.h
components/events_app/: CMakeLists.txt  events_app.c
components/events_app/include/: events_app.h
components/rgb_task/: CMakeLists.txt  Kconfig.projbuild  lv_factory_thermostat.c  lv_main_thermostat.c  rgblcd.c
components/rgb_task/fonts/: russo36.c  russo48.c
components/rgb_task/include/: rgblcd.h
components/thermostat_task/: CMakeLists.txt  thermostat_task.c
components/thermostat_task/include/: thermostat_task.h
components/tuya_interface/: CMakeLists.txt  tuya_interface.c
components/tuya_interface/include/: tuya_interface.h
src/: hello_world.c  tuya_config.h  tuya_main.c
