idf_component_register(SRCS 
"images/home_thermostat.c" 
"lv_factory_thermostat.c"
"lv_factory_thermostat.c" 
"lv_main_thermostat.c"
"lv_styles_thermostat.c"
"events_lcd.c"
"fonts/russo36.c" 
"fonts/russo48.c"
"images/ic_heating.c" 
"images/ic_thermometer.c" 
"images/ic_threshold.c" 
"images/ic_warning.c"
"rgblcd.c"
INCLUDE_DIRS 
"include"
REQUIRES lvgl__lvgl 

)

